--- a/serving/tensorflow_serving/servables/tensorflow/testdata/saved_model_half_plus_two_cpu/models.config
+++ b/serving/tensorflow_serving/servables/tensorflow/testdata/saved_model_half_plus_two_cpu/models.config
@@ -1,14 +1,14 @@
 model_config_list {
   config {
     name: '00000123'
-    base_path: '/serving/tensorflow_serving/servables/tensorflow/testdata/saved_model_half_plus_two_cpu'
+    base_path: '/models/halfplustwo'
   }
   config {
     name: '00000124'
-    base_path: '/serving/tensorflow_serving/servables/tensorflow/testdata/saved_model_half_plus_two_cpu'
+    base_path: '/models/halfplustwo'
   }
   config {
     name: '00000130'
-    base_path: '/serving/tensorflow_serving/servables/tensorflow/testdata/saved_model_half_plus_two_cpu'
+    base_path: '/models/halfplustwo'
   }
 }
